--- a/NeuroSegment/Resources/UI/NeuroSegment.ui
+++ b/NeuroSegment/Resources/UI/NeuroSegment.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>576</width>
-    <height>539</height>
+    <width>441</width>
+    <height>667</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -26,23 +26,23 @@
      <item>
       <layout class="QVBoxLayout" name="segmentEditorLayout">
        <item>
-        <widget class="qMRMLSegmentEditorWidget" name="segmentEditorWidget" native="true">
+        <widget class="qMRMLSegmentEditorWidget" name="segmentEditorWidget">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="masterVolumeNodeSelectorVisible" stdset="0">
+         <property name="masterVolumeNodeSelectorVisible">
           <bool>true</bool>
          </property>
-         <property name="switchToSegmentationsButtonVisible" stdset="0">
+         <property name="switchToSegmentationsButtonVisible">
           <bool>false</bool>
          </property>
-         <property name="maximumNumberOfUndoStates" stdset="0">
+         <property name="maximumNumberOfUndoStates">
           <number>10</number>
          </property>
-         <property name="unorderedEffectsVisible" stdset="0">
+         <property name="unorderedEffectsVisible">
           <bool>true</bool>
          </property>
         </widget>
@@ -54,12 +54,19 @@
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
-           <widget class="qMRMLWindowLevelWidget" name="windowLevelWidget" native="true"/>
+           <widget class="qMRMLWindowLevelWidget" name="windowLevelWidget"/>
           </item>
           <item>
-           <widget class="qMRMLVolumeThresholdWidget" name="volumeThresholdWidget" native="true"/>
+           <widget class="qMRMLVolumeThresholdWidget" name="volumeThresholdWidget"/>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="createHistogramButton">
+         <property name="text">
+          <string>Create histogram</string>
+         </property>
         </widget>
        </item>
       </layout>
@@ -75,7 +82,19 @@
       <widget class="ctkExpandableWidget" name="infoExpandableWidget">
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <widget class="qSlicerTerminologyNavigatorWidget" name="terminologyNavigatorWidget" native="true"/>
+         <widget class="QWebEngineView" name="webEngineView">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="url">
+           <url>
+            <string>file:///E:/d/s/BwhNeuroImagingCollab/NeuroSegment/Resources/Doc/index.html</string>
+           </url>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -114,12 +133,6 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>qSlicerTerminologyNavigatorWidget</class>
-   <extends>qMRMLWidget</extends>
-   <header>qSlicerTerminologyNavigatorWidget.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>ctkCollapsibleGroupBox</class>
    <extends>QGroupBox</extends>
    <header>ctkCollapsibleGroupBox.h</header>
@@ -135,6 +148,11 @@
    <extends>QFrame</extends>
    <header>ctkExpandableWidget.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QWebEngineView</class>
+   <extends>QWidget</extends>
+   <header location="global">QtWebEngineWidgets/QWebEngineView</header>
   </customwidget>
  </customwidgets>
  <resources/>
